Fix title align to center

--- a/web/assets/css/autobank-style.css
+++ b/web/assets/css/autobank-style.css
@@ -10,4 +10,5 @@ table {
 h1.title {
     font-size: 32px;
     margin: 20px auto 10px auto;
+    text-align: center;
 }
